# CryptoScan_SparkFlow_hadoop

./: .pre-commit-config.yaml  GfG.csv  README.md  __init__.py  alex_dag.py  alex_dag_cur.py  alex_dag_days.py  command.py  notebook.ipynb  pyproject.toml
API/Bybit/: REST_Ticker.py  REST_get_orderbook.py
API/CoinMarketCap/: get_symbol.ipynb
API/Gate_io/: API_Gate_io.py  config.py
API/HTX/: API_HTX.py
API/Kukoin/: API_Kukoin.py  README.md
GO/Bybit/: REST_Ticker.go
Python/: code
Python/Bybit/: REST_Ticker.py  REST_get_orderbook.py  WS_Ticker.py  WS_get_orderbook.py  get_symbols.py
Python/CoinMarketCap/: symbol.csv
Python/Gate_io/: API_Gate_io.py  API_Gate_io_return.txt
Python/HTX/: API_HTX.py
Python/Kukoin/: API_Kukoin.py  API_Kukoin_return.txt  config.py
airflow/: __init__.py  compute.py  current.py  execute.py
airflow/tgbot/: __init__.py  telegrambot.py
api/: parsing.py
api/bybit/: REST_Ticker.py
api/gate_io/: API_Gate_io.py
api/htx/: API_HTX.py
api/kukoin/: API_Kukoin.py  __init__.py
app/: __init__.py
compute/: current.py  days.py
compute/tgbot/: telegrambot.py
conf/: config.yaml
logs/scheduler/: latest
temp/: 0.txt  1.txt  market.txt
temp/pars/: README.md
temp/spark/: temp.txt
tgbot/: telegrambot.py
